--- a/index.html
+++ b/index.html
@@ -265,26 +265,26 @@
         <div class="row">
           <div class="col-xs-6 col-sm-3 counter-data">
             <span class="icon icon-sm fa fa-users"></span>
-            <div data-speed="2000" data-from="0" data-to="14" class="counter"></div>
+            <div data-speed="2000" data-from="0" data-to="18" class="counter"></div>
             <h6>People Worked</h6>
           </div>
           <!-- Counter item -->
           <div class="col-xs-6 col-sm-3 counter-data">
             <span class="icon icon-sm m-sm-0 fa fa-download"></span>
-            <div data-speed="10" data-from="0" data-to="2500" class="counter"></div>
+            <div data-speed="10" data-from="0" data-to="100" class="counter"></div>
             <h6>User Base</h6>
           </div>
           <!-- Counter item -->
           <div class="col-xs-6 col-sm-3 counter-data">
             <span class="icon icon-sm fa fa-clock-o"></span>
-            <div data-speed="2000" data-from="0" data-to="456" class="counter"></div>
+            <div data-speed="2000" data-from="0" data-to="4000" class="counter"></div>
             <h6>Papers Printed</h6>
           </div>
           <!-- Counter item -->
           <div class="col-xs-6 col-sm-3 counter-data">
             <span class="icon icon-sm fa fa-coffee"></span>
             <div data-speed="2000" data-from="0" data-to="69" class="counter"></div>
-            <h6>Hours of Coffee</h6>
+            <h6>Cups of Coffee</h6>
           </div>
         </div>
       </div>
