--- a/index.html
+++ b/index.html
@@ -487,13 +487,13 @@
                 <div class="unit">
                   <div class="unit-left"><i class="fa fa-phone"></i></div>
                   <div class="unit-body">
-                    <a href="tel:+0991234286">+91 9999999999</a>
+                    <a href="tel:+918220578781">+91 8220578781</a>
                   </div>
                 </div>
                 <div class="unit">
                   <div class="unit-left"><i class="fa fa-envelope"></i></div>
                   <div class="unit-body">
-                    <a href="mailto:support@mail.net">crispypage@gmail.com</a>
+                    <a href="mailto:support@mail.net">crispypage98@gmail.com</a>
                   </div>
                 </div>
                 <div class="unit">
