--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </section> -->
 
     <!--========== Team section ==========-->
-    <!-- <section class="p-100">
+     <section class="p-100">
       <div class="container">
         <div class="section-title">
           <h2><span>Meet</span> our team</h2>
@@ -209,17 +209,33 @@
         <div class="row flex-center">
           <div class="col-sm-6 col-md-4">
             <figure>
-              <img src="img/person-1.jpg" alt="">
+              <img src="img/sagar.jpg" alt="">
               <div class="links-wrap">
                 <ul class="list-inline">
-                  <li><a href="#" class="icon fa fa-facebook"></a></li>
-                  <li><a href="#" class="icon fa fa-twitter"></a></li>
-                  <li><a href="#" class="icon fa fa-instagram"></a></li>
+                  <li><a href="https://www.facebook.com/sagar.chainani" class="icon fa fa-facebook"></a></li>
+                  <li><a href="https://twitter.com/Sagarchainani4" class="icon fa fa-twitter"></a></li>
+                  <li><a href="https://www.instagram.com/sagarchainani04" class="icon fa fa-linkedin"></a></li>
                 </ul>
               </div>
               <figcaption class="all-light">
-                <h4 class="text-bold">Jennifer Moss</h4>
-                <h6>Web Designer</h6>
+                <h4 class="text-bold">Sagar Chainani </h4>
+                <h6>Co-founder</h6>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-sm-6 col-md-4">
+            <figure>
+              <img src="img/saurabh.jpg" alt="">
+              <div class="links-wrap">
+                <ul class="list-inline">
+                  <li><a href="https://www.facebook.com/saurabh.garg5991" class="icon fa fa-facebook"></a></li>
+                  <li><a href="https://twitter.com/brianoconner777" class="icon fa fa-twitter"></a></li>
+                  <li><a href="linkedin.com/in/saurabhgarg5991/" class="icon fa fa-linkedin"></a></li>
+                </ul>
+              </div>
+              <figcaption class="all-light">
+                <h4 class="text-bold">Saurabh Garg</h4>
+                <h6>Co-Founder</h6>
               </figcaption>
             </figure>
           </div>
@@ -228,17 +244,36 @@
               <img src="img/jagan.jpg" alt="">
               <div class="links-wrap">
                 <ul class="list-inline">
-                  <li><a href="#" class="icon fa fa-facebook"></a></li>
-                  <li><a href="#" class="icon fa fa-twitter"></a></li>
-                  <li><a href="#" class="icon fa fa-instagram"></a></li>
+                   <li><a href="https://www.facebook.com/abhijeet.roxx.12" class="icon fa fa-facebook"></a></li>
+                  <li><a href="https://twitter.com/abhijeet1997_" class="icon fa fa-twitter"></a></li>
+                  <li><a href="https://www.linkedin.com/in/kjaganmohan/" class="icon fa fa-linkedin"></a></li>
                 </ul>
               </div>
               <figcaption class="all-light">
-                <h4 class="text-bold">Hugo Conner</h4>
-                <h6>Web Developer</h6>
+                <h4 class="text-bold">Jagan Mohan</h4>
+                <h6>Co-founder</h6>
               </figcaption>
             </figure>
           </div>
+          
+        </div>
+          <div class="row flex-center">
+          <div class="col-sm-6 col-md-4">
+            <figure>
+              <img src="img/sarthak.jpg" alt="">
+              <div class="links-wrap">
+                <ul class="list-inline">
+                  <li><a href="https://www.facebook.com/sarthak.soral1" class="icon fa fa-facebook"></a></li>
+                  <li><a href="https://twitter.com/pankajsngh1997" class="icon fa fa-twitter"></a></li>
+                  <li><a href="https://instagram.com/Pankajsngh" class="icon fa fa-linkedin"></a></li>
+                </ul>
+              </div>
+              <figcaption class="all-light">
+                <h4 class="text-bold">Sarthak Sarol </h4>
+                <h6>Co-founder</h6>
+              </figcaption>
+            </figure>
+          </div> 
           <div class="col-sm-6 col-md-4">
             <figure>
               <img src="img/pankaj.jpg" alt="">
@@ -246,20 +281,21 @@
                 <ul class="list-inline">
                   <li><a href="https://facebook.com/pankajsnghpx" class="icon fa fa-facebook"></a></li>
                   <li><a href="https://twitter.com/pankajsngh1997" class="icon fa fa-twitter"></a></li>
-                  <li><a href="https://instagram.com/Pankajsngh" class="icon fa fa-instagram"></a></li>
+                  <li><a href="https://instagram.com/Pankajsngh" class="icon fa fa-linkedin"></a></li>
                 </ul>
               </div>
               <figcaption class="all-light">
                 <h4 class="text-bold">Pankaj Singh </h4>
-                <h6>Product manager</h6>
+                <h6>Manager@KTR</h6>
               </figcaption>
             </figure>
-          </div>
+          </div>                   
         </div>
+        
       </div>
     </section>
 
-     --><!--========== Counter section ==========-->
+     <!--========== Counter section ==========-->
     <section class="bg-primary bg-gradient count-on shape-2">
       <div class="container all-light">
         <div class="row">
