--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <ul class="k-nav-links">
             <li class="active"><a href="#" data-nav-to="#one">Home</a></li>
             <li><a data-nav-to="#two" href="#">Info</a></li>
-            <!-- <li><a data-nav-to="#three" href="#">Screenshots</a></li>
-            <li><a data-nav-to="#four" href="#">Why us?</a></li>
-            <li><a data-nav-to="#download" href="#">Download</a></li>
+            <li><a data-nav-to="#three" href="#">Screenshots</a></li>
+            <li><a data-nav-to="#four" href="#">Team</a></li>
+            <!-- <li><a data-nav-to="#download" href="#">Download</a></li>
             <li><a data-nav-to="#five" href="#">Pricing</a></li> -->
             <li><a data-nav-to="#six" href="#">Contact Us</a></li>
           </ul>
@@ -199,7 +199,7 @@
     </section> -->
 
     <!--========== Team section ==========-->
-     <section class="p-100">
+     <section id="four" class="p-100">
       <div class="container">
         <div class="section-title">
           <h2><span>Meet</span> our team</h2>
