team section removed

--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
     </section> -->
 
     <!--========== Team section ==========-->
-     <section id="four" class="p-100">
+     <!-- <section id="four" class="p-100">
       <div class="container">
         <div class="section-title">
           <h2><span>Meet</span> our team</h2>
@@ -295,7 +295,7 @@
       </div>
     </section>
 
-     <!--========== Counter section ==========-->
+     <!-========== Counter section ==========-->
     <section class="bg-primary bg-gradient count-on shape-2">
       <div class="container all-light">
         <div class="row">
@@ -327,7 +327,8 @@
       <span class="shape-after"></span>
       <img src="img/shape-01.png" alt="">
       <img src="img/shape-01.png" alt="">
-    </section>
+    </section> 
+
 
     <!--========== Video section ==========-->
     <!-- <section id="four" class="p-100">
