--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="container">
         <div class="section-title">
           <h2><span>our</span> WORKFLOW</h2>
-          <p>Printing of documents has never been this easier before. </p>
+          <p>Printing of documents has never been this easy before. </p>
           <hr class="divider">
         </div>
         <div class="row flex-center">
@@ -113,7 +113,7 @@
           <div class="col-md-4 sideline-right">
             <div class="sideline-block right wow fadeInUp">
               <h5>Minimalistic Design</h5>
-              <p>We didn't want to puch too much design so that it becomes very easy and straightforward for our consumers to get the work done primarily. </p>
+              <p>We didn't want to put too much design so that it becomes very easy and straightforward for our consumers to get the work done primarily. </p>
             </div>
             <div class="sideline-block right wow fadeInUp">
               <h5>Types of Documents</h5>
