--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <p>Our apps are coming soon on Playstore & App Store.</p>
             <div class="btn-block">
               <a href="#" class="hover-scale btn p-zero"><img src="img/appstore.png" alt=""></a>
-              <a href="#" class="hover-scale btn p-zero"><img src="img/google-play.png" alt=""></a>
+              <a href="https://play.google.com/store/apps/details?id=c.crispypage" class="hover-scale btn p-zero"><img src="img/google-play.png" alt=""></a>
             </div>
           </div>
           <div class="col-md-7 mt-30 mt-md-0">
