--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
               <h2>Screenshots</h2>
               <hr class="divider divider-left">
             </div>
-            <p>We are currently developing our mobile applications. After this, you'll be able to order from any platform.</p>
-            <p>Our apps are coming soon on Playstore & App Store.</p>
+            <p>We are currently live on Android Platform. Download the Android app to get printing done via app.</p>
+            <p>Our apps are coming soon on iPhone's App Store.</p>
             <div class="btn-block">
               <a href="#" class="hover-scale btn p-zero"><img src="img/appstore.png" alt=""></a>
               <a href="https://play.google.com/store/apps/details?id=c.crispypage" class="hover-scale btn p-zero"><img src="img/google-play.png" alt=""></a>
