--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="col-md-7 text-md-left k-parallax-content" data-fade="true" data-speed="0.3">
               <h1>PRINTER AT YOUR DOOR</h1>
               <h5>Save your time. Save your money. <br class="hide show-md-block">Your hassle is our hustle now. </h5>
-              <a href="https://docs.google.com/forms/d/e/1FAIpQLSekkHphJet5lx0eh__Zj0km0dZxVanL2pjrcLMzsTBuALSKFg/viewform?usp=sf_link" class="btn btn-md btn-default">USE IT NOW ON WEB</a>
+              <a href="https://docs.google.com/forms/d/e/1FAIpQLSekkHphJet5lx0eh__Zj0km0dZxVanL2pjrcLMzsTBuALSKFg/viewform?usp=sf_link" class="btn btn-md btn-default">USE IT NOW </a>
             </div>
             <div class="col-sm-8 col-md-5 mt-30 mt-md-0">
               <img src="img/1.png" class="main-image" alt="">
