--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en" class="wow-animation">
-
-<!-- Mirrored from kei-four.adr.com.ua/templates/neon/index-animated.html by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 06 Oct 2017 09:21:20 GMT -->
 <head>
     <!-- Site Title -->
     <title>CrispyPage - Its easier now</title>
@@ -18,7 +16,6 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/style-color-1.css">
-  
 </head>
 <body>
 
@@ -546,8 +543,6 @@
         </div>
       </div>
     </section>
-
-
   </main>
   
   <!--/////////////////////////// FOOTER \\\\\\\\\\\\\\\\\\\\\\\\\\\-->
@@ -559,7 +554,7 @@
         <ul class="list-inline">
           <li><a href="https://www.facebook.com/pagecrispy/" class="icon fa fa-facebook"></a></li>
           <li><a href="#" class="icon fa fa-twitter"></a></li>
-          <li><a href="#" class="icon fa fa-instagram"></a></li>
+          <li><a href="https://www.instagram.com/crispypageofficial/" class="icon fa fa-instagram"></a></li>
         </ul>
       </div>
     </div>
